--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,7 +14,7 @@
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.spenditure.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/tittle_category"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
