--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,14 +3,21 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:title="@string/title_reports" />
+        android:title="@string/title_home"
+        android:icon="@drawable/ic_home_black_24dp"/>
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:title="@string/title_create_transaction" />
+        android:id="@+id/navigation_reports"
+        android:title="@string/title_reports"
+        android:icon="@drawable/ic_notifications_black_24dp"/>
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_create_transaction"
+        android:title="@string/title_create_transaction"
+        android:icon="@drawable/ic_dashboard_black_24dp"/>
+
+    <item
+        android:id="@+id/navigation_view_transactions"
         android:title="@string/title_view_transactions" />
 
 </menu>
