Layout changes to CreateTransactionActivity; started method to save user inputs

--- a/app/src/main/res/layout/activity_create_transaction.xml
+++ b/app/src/main/res/layout/activity_create_transaction.xml
@@ -7,169 +7,195 @@
     tools:context="com.spenditure.presentation.CreateTransactionActivity">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/textview_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_create_transaction"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/what_the_heck"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/textview_what_the_heck"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/what_the_heck"
+        android:id="@+id/textview_what_the_heck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_what_the_heck"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/date"
-        app:layout_constraintEnd_toEndOf="@+id/edit_what_the_heck"
+        app:layout_constraintBottom_toTopOf="@+id/textview_date"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_what_the_heck"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_title" />
 
     <EditText
-        android:id="@+id/edit_what_the_heck"
+        android:id="@+id/edittext_what_the_heck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="coffee at Don's"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/edit_date"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/what_the_heck"
-        app:layout_constraintTop_toBottomOf="@+id/title"/>
+        app:layout_constraintStart_toEndOf="@+id/textview_what_the_heck"
+        app:layout_constraintTop_toBottomOf="@+id/textview_title"/>
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/textview_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_date"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/place"
-        app:layout_constraintEnd_toEndOf="@+id/edit_date"
+        app:layout_constraintBottom_toTopOf="@+id/textview_place"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/what_the_heck" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_what_the_heck" />
 
     <EditText
-        android:id="@+id/edit_date"
+        android:id="@+id/edittext_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jan. 7th"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/place"
+        app:layout_constraintBottom_toTopOf="@+id/textview_place"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/date"
-        app:layout_constraintTop_toBottomOf="@+id/edit_what_the_heck"/>
+        app:layout_constraintStart_toEndOf="@+id/textview_date"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_what_the_heck"/>
 
     <TextView
-        android:id="@+id/place"
+        android:id="@+id/textview_place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_place"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/amount"
-        app:layout_constraintEnd_toEndOf="@+id/edit_place"
+        app:layout_constraintBottom_toTopOf="@+id/textview_amount"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_place"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_date" />
 
     <EditText
-        android:id="@+id/edit_place"
+        android:id="@+id/edittext_place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="McDonald's"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/amount"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_amount"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/place"
-        app:layout_constraintTop_toBottomOf="@+id/edit_date"/>
+        app:layout_constraintStart_toEndOf="@+id/textview_place"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_date"/>
 
     <TextView
-        android:id="@+id/amount"
+        android:id="@+id/textview_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_amount"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/type"
-        app:layout_constraintEnd_toEndOf="@+id/edit_amount"
+        app:layout_constraintBottom_toTopOf="@+id/textview_type"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_amount"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/place" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_place" />
 
     <EditText
-        android:id="@+id/edit_amount"
+        android:id="@+id/edittext_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$3.95"
+        android:text="3.95"
+        android:inputType="numberDecimal"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/type"
+        app:layout_constraintBottom_toTopOf="@+id/togglebutton_type"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/amount"
-        app:layout_constraintTop_toBottomOf="@+id/edit_place"/>
+        app:layout_constraintStart_toEndOf="@+id/textview_amount"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_place"/>
 
     <TextView
-        android:id="@+id/type"
+        android:id="@+id/textview_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_type"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/comments"
-        app:layout_constraintEnd_toEndOf="@+id/edit_type"
+        app:layout_constraintBottom_toTopOf="@+id/textview_comments"
+        app:layout_constraintEnd_toStartOf="@+id/togglebutton_type"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/amount" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_amount" />
 
-    <EditText
-        android:id="@+id/edit_type"
+<!--    <EditText
+        android:id="@+id/edittext_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Deposit"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/comments"
+        app:layout_constraintBottom_toTopOf="@+id/textview_comments"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/type"
-        app:layout_constraintTop_toBottomOf="@+id/edit_amount"/>
+        app:layout_constraintStart_toStartOf="@+id/textview_type"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_amount"/>-->
+
+    <androidx.appcompat.widget.AppCompatToggleButton
+        android:id="@+id/togglebutton_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Deposit"
+        android:textSize="25dp"
+        android:textOn="Withdrawal"
+        android:textOff="Deposit"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_comments"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textview_type"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_amount"/>
 
     <TextView
-        android:id="@+id/comments"
+        android:id="@+id/textview_comments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_comments"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/categories"
-        app:layout_constraintEnd_toEndOf="@+id/edit_comments"
+        app:layout_constraintBottom_toTopOf="@+id/textview_categories"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_comments"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/type" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_type" />
 
     <EditText
-        android:id="@+id/edit_comments"
+        android:id="@+id/edittext_comments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deposit"
+        android:text="Here are some things"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/categories"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_categories"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/comments"
-        app:layout_constraintTop_toBottomOf="@+id/edit_type"/>
+        app:layout_constraintStart_toEndOf="@+id/textview_comments"
+        app:layout_constraintTop_toBottomOf="@+id/togglebutton_type"/>
 
     <TextView
-        android:id="@+id/categories"
+        android:id="@+id/textview_categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_categories"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintEnd_toEndOf="@+id/edit_categories"
+        app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_categories"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/comments" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_comments" />
 
     <EditText
-        android:id="@+id/edit_categories"
+        android:id="@+id/edittext_categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Food"
         android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textview_categories"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_comments"/>
+
+    <Button
+        android:id="@+id/button_create_transaction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title_create_transaction"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/categories"
-        app:layout_constraintTop_toBottomOf="@+id/edit_comments"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_categories"/>/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
