--- a/app/src/main/res/layout/activity_create_transaction.xml
+++ b/app/src/main/res/layout/activity_create_transaction.xml
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="3.95"
-        android:inputType="numberDecimal"
+        android:inputType="number"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/togglebutton_type"
         app:layout_constraintEnd_toEndOf="parent"
