Minor layout changes to activity_create_transaction and activity_view_transactions

--- a/app/src/main/res/layout/activity_create_transaction.xml
+++ b/app/src/main/res/layout/activity_create_transaction.xml
@@ -32,7 +32,7 @@
         android:id="@+id/edittext_what_the_heck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="coffee at Don's"
+        android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/edittext_date"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
         android:id="@+id/edittext_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jan. 7th"
+        android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/textview_place"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
         android:id="@+id/edittext_place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="McDonald's"
+        android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/edittext_amount"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,7 @@
         android:id="@+id/edittext_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3.95"
+        android:minWidth="120dp"
         android:inputType="number"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/togglebutton_type"
@@ -156,7 +156,7 @@
         android:id="@+id/edittext_comments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Here are some things"
+        android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/edittext_categories"
         app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +178,7 @@
         android:id="@+id/edittext_categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Food"
+        android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
         app:layout_constraintEnd_toEndOf="parent"
