--- a/app/src/main/res/layout/activity_transactions_list_view.xml
+++ b/app/src/main/res/layout/activity_transactions_list_view.xml
@@ -5,17 +5,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TransactionsListViewActivity"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textview_list_what_the_heck"
-        android:text="Transaction 1"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginRight="100dp">
+
+        <TextView
+            android:id="@+id/textview_list_what_the_heck"
+            android:text="Transaction 1"
+            android:textSize="18dp"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textview_list_amount"
+            android:text="$3.95"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button_edit_transaction"
+        android:text="@string/label_edit"
+        android:layout_margin="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/textview_list_amount"
-        android:text="$3.95"
+    <Button
+        android:id="@+id/button_delete_transaction"
+        android:text="@string/label_delete"
+        android:layout_margin="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
