--- a/app/src/main/res/layout/activity_view_transactions.xml
+++ b/app/src/main/res/layout/activity_view_transactions.xml
@@ -12,10 +12,21 @@
         android:layout_height="wrap_content"
         android:text="@string/title_view_transactions"
         android:textSize="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/listview_transactions"
+        app:layout_constraintBottom_toTopOf="@+id/togglebutton_transaction_date_sort"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatToggleButton
+        android:id="@+id/togglebutton_transaction_date_sort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textOn="Newest First"
+        android:textOff="Oldest First"
+        app:layout_constraintBottom_toTopOf="@+id/listview_transactions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_title"/>
 
     <ListView
         android:id="@+id/listview_transactions"
@@ -26,7 +37,7 @@
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/togglebutton_transaction_date_sort"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
