--- a/app/src/main/res/layout/activity_transactions_list_view.xml
+++ b/app/src/main/res/layout/activity_transactions_list_view.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:layout_marginRight="100dp">
 
@@ -29,19 +30,5 @@
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/button_edit_transaction"
-        android:text="@string/label_edit"
-        android:layout_margin="3dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/button_delete_transaction"
-        android:text="@string/label_delete"
-        android:layout_margin="3dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 </LinearLayout>
