--- a/app/src/main/res/layout/activity_view_transactions.xml
+++ b/app/src/main/res/layout/activity_view_transactions.xml
@@ -12,21 +12,49 @@
         android:layout_height="wrap_content"
         android:text="@string/title_view_transactions"
         android:textSize="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/togglebutton_transaction_date_sort"
+        app:layout_constraintBottom_toTopOf="@+id/linearlayout_controls"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatToggleButton
-        android:id="@+id/togglebutton_transaction_date_sort"
+    <LinearLayout
+        android:id="@+id/linearlayout_controls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textOn="Newest First"
-        android:textOff="Oldest First"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/listview_transactions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/textview_title">
+
+        <androidx.appcompat.widget.AppCompatToggleButton
+            android:id="@+id/togglebutton_transaction_date_sort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textOn="Newest First"
+            android:textOff="Oldest First"
+            app:layout_constraintBottom_toTopOf="@+id/listview_transactions"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_title"/>
+
+        <Button
+            android:id="@+id/button_edit"
+            android:enabled="false"
+            android:onClick="editTransactionClicked"
+            android:text="@string/label_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/button_delete"
+            android:enabled="false"
+            android:onClick="deleteTransactionClicked"
+            android:text="@string/label_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listview_transactions"
@@ -34,10 +62,12 @@
         android:layout_height="wrap_content"
         android:text="@string/title_view_transactions"
         android:textSize="40dp"
+        android:choiceMode="singleChoice"
+        android:listSelector="@color/purple_200"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/togglebutton_transaction_date_sort"/>
+        app:layout_constraintTop_toBottomOf="@+id/linearlayout_controls"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
