--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize"
-    tools:context="com.spenditure.application.MainActivity">
+    tools:context="com.spenditure.presentation.ViewReportActivity">
 
     <TextView
         android:layout_width="wrap_content"
