--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#edede9</color>
+    <color name="green_dark">#81b29a</color>
+    <color name="green_light">#00f5d4</color>
+    <color name="pink">#f15bb5</color>
 </resources>
