Re-structure file in representaion
Add packages for transaction, category in presentation layer.

--- a/app/src/main/res/layout/activity_create_transaction.xml
+++ b/app/src/main/res/layout/activity_create_transaction.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.spenditure.presentation.CreateTransactionActivity">
+    tools:context="com.spenditure.presentation.transaction.CreateTransactionActivity">
 
     <TextView
         android:id="@+id/textview_title"
