--- a/app/src/main/res/layout/activity_edit_transaction.xml
+++ b/app/src/main/res/layout/activity_edit_transaction.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.spenditure.presentation.EditTransactionActivity">
+    tools:context="com.spenditure.presentation.transaction.EditTransactionActivity">
 
     <TextView
         android:id="@+id/textview_title"
