--- a/app/src/main/res/layout/add_new_category.xml
+++ b/app/src/main/res/layout/add_new_category.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.spenditure.presentation.AddNewCategory">
+    tools:context="com.spenditure.presentation.category.AddNewCategory">
 
     <EditText
         android:id="@+id/category_edittext"
