--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -26,7 +26,7 @@
                 android:text="Category 1"
                 android:textSize="32dp"
                 android:textColor="@color/white"
-                android:background="@color/green_light"
+                android:background="#c8c8fe"
                 android:textStyle="bold"
 
                 app:layout_constraintBottom_toBottomOf="parent"
