--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_tittle_bar_height"
-            >
+            android:layout_height="@dimen/app_tittle_bar_height">
 
 
             <ImageView
@@ -62,25 +61,137 @@
                         android:id="@+id/textView2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center"
                         android:text="Report"
                         android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
+        <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="24dp" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="50dp">
+
+                    <ImageView
+                        android:id="@+id/imageview_summary_report"
+                        android:layout_width="0dp"
+                        android:layout_height="200dp"
+
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:srcCompat="@drawable/report_card_backgroud" />
+
+                    <ImageView
 
 
-        </LinearLayout>
+                        android:layout_width="70dp"
 
+                        android:layout_height="70dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.01"
+                        app:layout_constraintStart_toStartOf="@+id/imageview_summary_report"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:srcCompat="@drawable/bar_report_grey" />
+
+                    <ImageView
+
+
+                        android:layout_width="200dp"
+
+                        android:layout_height="200dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:alpha="0.1"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
+                        app:srcCompat="@drawable/banking_report_grey" />
+
+                    <ImageView
+
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+
+                        app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
+                        app:layout_constraintEnd_toEndOf="@+id/imageView_report_summary_check"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
+                        app:layout_constraintVertical_bias="0.375"
+                        app:srcCompat="@drawable/check_report_grey" />
+
+                    <ImageView
+
+                        android:id="@+id/imageView_report_summary_check"
+                        android:layout_width="40dp"
+
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="40dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
+                        app:layout_constraintEnd_toStartOf="@+id/textview_number_transactions"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
+                        app:layout_constraintVertical_bias="0.687"
+                        app:srcCompat="@drawable/check_report_grey" />
+
+                    <TextView
+                        android:id="@+id/textview_spending_total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="You've spent 15 000 CAD"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
+                        app:layout_constraintEnd_toEndOf="@+id/imageview_summary_report"
+                        app:layout_constraintStart_toStartOf="@+id/imageview_summary_report"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
+                        app:layout_constraintVertical_bias="0.37" />
+
+                    <TextView
+                        android:id="@+id/textview_number_transactions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="You've made 500 transactions"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
+                        app:layout_constraintEnd_toEndOf="@+id/imageview_summary_report"
+                        app:layout_constraintStart_toStartOf="@+id/imageview_summary_report"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
+                        app:layout_constraintVertical_bias="0.68" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
+
+        </ScrollView>
     </LinearLayout>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
