Initialize UI for report

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -187,7 +187,66 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="16dp" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="50dp">
+
+                    <ImageView
+                        android:id="@+id/imageview_customize_report"
+                        android:layout_width="0dp"
+                        android:layout_height="200dp"
+
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:srcCompat="@drawable/report_card_backgroud" />
+
+                    <ImageView
+
+
+                        android:layout_width="70dp"
+
+                        android:layout_height="70dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageview_customize_report"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.01"
+                        app:layout_constraintStart_toStartOf="@+id/imageview_customize_report"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_customize_report"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:srcCompat="@drawable/bar_report_grey" />
+
+                    <ImageView
+
+
+                        android:layout_width="200dp"
+
+                        android:layout_height="200dp"
+                        android:alpha="0.1"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="@+id/imageview_customize_report"
+                        app:layout_constraintTop_toTopOf="@+id/imageview_customize_report"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:srcCompat="@drawable/hand_holding_dollar_solid" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </LinearLayout>
+
+
+
 
         </ScrollView>
     </LinearLayout>
