Finish UI for feature 4
Fill in data to UI
Note: code will be clean in the next commit.

--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -22,11 +22,11 @@
                 android:id="@+id/category_card_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/gradient_backgroud_light_blue"
                 android:padding="10dp"
                 android:text="Category 1"
-                android:textSize="32dp"
                 android:textColor="@color/white"
-                android:background="#c8c8fe"
+                android:textSize="32dp"
                 android:textStyle="bold"
 
                 app:layout_constraintBottom_toBottomOf="parent"
