--- a/app/src/main/res/drawable/gradient_background_dark_blue.xml
+++ b/app/src/main/res/drawable/gradient_background_dark_blue.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="50dp"/>
-            <gradient android:startColor="#3c8ce7" android:endColor="#00eaff" android:angle="0"/>
+            <gradient android:startColor="#3c8ce7" android:endColor="#62cff4" android:angle="0"/>
         </shape>
     </item>
 </selector>
