--- a/app/src/main/res/layout/report_slide.xml
+++ b/app/src/main/res/layout/report_slide.xml
@@ -4,13 +4,138 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:id="@+id/report_slider_layout">
+    android:id="@+id/report_slider_layout"
+    android:background="@color/black">
     <TextView
+        android:text="Title"
+        android:id="@+id/slide_tittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello"
-        android:id="@+id/slide_tittle"
+        android:textColor="@color/white"
+        android:paddingTop="8dp"
         android:textStyle="bold"
-        android:textSize="30sp"/>
+        android:textSize="30sp"
+        />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:rowCount="2"
+        android:columnCount="2"
+        >
+
+        <!-- First quarter -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:src="@drawable/symbol_doc" />
+
+            <TextView
+                android:id="@+id/textview_catReport_transactionsCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20 transactions"
+                android:textSize="@dimen/normal_size"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+        <!-- Second quarter -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/symbol_addchart"
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/textview_catReport_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="$1000 CAD"
+                android:textSize="@dimen/normal_size"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+        <!-- Third quarter -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/symbol_calculate"
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/textview_catReport_average"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100 CAD"
+                android:textSize="@dimen/normal_size"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+
+        </LinearLayout>
+
+        <!-- Fourth quarter -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/symbol_pie_chart"
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/textview_catReport_percentage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20 %"
+                android:textSize="@dimen/normal_size"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+
+
+    </GridLayout>
+
+
 
 </LinearLayout>
