--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="app_tittle">30sp</dimen>
     <dimen name="app_tittle_bar_height">80dp</dimen>
+
+    <dimen name="normal_size">25sp</dimen>
 </resources>
